azure/ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: giga-superset-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "kv-cert-unitst"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    appgw.ingress.kubernetes.io/request-timeout: "120"
spec:
  rules:
  - host: io-superset-stg.unitst.org
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: superset
            port:
              number: 8088
